# Cargo-Play

./: Cargo.toml
src/: app.rs  error.rs  main.rs
src/tui/: mod.rs  state.rs
src/tui/widgets/: library.rs  mod.rs  player_bar.rs  queue.rs
