[package]
name = "cargo_play"
version = "0.1.0"
description = "Rust TUI music player"
authors = ["Mateusz Kroplewski <kroplewskimateusz@gmail.com>"]
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
thiserror = "2.0.18"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
